fix the alignment of hersection, images and font style

--- a/style.css
+++ b/style.css
@@ -117,6 +117,22 @@ i{
     justify-content: space-between;
     align-items: center;
 }
+.hero p{
+    font-family: "Montserrat", Sans-serif;
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: 100;
+    text-transform: capitalize;
+    /* line-height: 0em; */
+}
+
+.hero h1{
+    font-family: "Varela Round", Sans-serif;
+}
+
+.hero button{
+    font-family: "Montserrat", Sans-serif;
+}
 
 /* Style for the hero content */
 .hero {
@@ -134,20 +150,12 @@ i{
     margin: 71px;
 }
 
-.hero p {
-    font-size: 20px;
-    color: #ffffff;
-    font-weight: 200;
-    text-transform: capitalize;
-    line-height: 1.1em;
-    font-family: "Montserrat", Sans-serif;
-}
 /* style for second p */
-.hero1 p {
-    font-size: 16px;
-    color: rgb(161,157,196);
-    font-weight: 200;
-    line-height: 1.4em;
+.hero1 p{
+    font-family: "Montserrat", Sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    text-transform: capitalize;
 }
 
 .hero h1 {
@@ -165,7 +173,14 @@ i{
     font-weight: 300;
     text-transform: capitalize;
     line-height: 1.2em;
+    font-family: "Varela Round", Sans-serif;
 
+}
+
+.hero1 button{
+    font-family: "Montserrat", Sans-serif;
+    margin: 30px;
+    margin-left: 0px;
 }
 
 .button {
@@ -203,6 +218,14 @@ i{
     font-size: 20px;
     font-family: monospace;
 }
+.button2 button{
+    font-family: "Montserrat", Sans-serif;
+    align-items: center;
+    justify-content: center;
+}
+.problem1 h1{
+    margin-top: -15px;
+}
 
 .problems{
     background-color: rgb(229,253,255);
@@ -230,6 +253,9 @@ i{
     font-weight: 300;
     text-transform: capitalize;
     line-height: 1.2em;
+}
+.image1 img{
+    margin-bottom: -212px;
 }
 
 .button:hover {
